# tandem

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: deploy.yml  tauri-release.yml
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  supabase.rs  tracker.rs  tray.rs
extension/: background.js  content.js  manifest.json  popup.html  popup.js
public/: push-sw.js
src/: App.tsx  index.css
src/auth/: AuthProvider.tsx  ProtectedRoute.tsx
src/components/: AppShell.tsx
src/components/ui/: Button.tsx  Modal.tsx
src/features/analytics/: AnalyticsPage.tsx  DaySessionsModal.tsx  analytics.ts  useBrowserActivity.ts  useDesktopActivity.ts  useDistractionEvents.ts  useWorkSessions.ts
src/features/assistant/: Assistant.tsx  MarkdownMessage.tsx  openPlanner.ts  useAssistant.ts
src/features/checkin/: useDailyCheckin.ts
src/features/dashboard/: Calendar.tsx  CalendarPage.tsx  DayCalendar.tsx  DayPlan.tsx  (+2 more)
src/lib/: dates.ts  env.ts  queryClient.ts  supabase.ts  types.ts
src/pages/: Dashboard.tsx  Login.tsx  Placeholder.tsx
supabase/: cron-setup.sql
supabase/migrations/: 0001_init.sql  0002_browser_activity.sql  0003_distraction_events.sql  0004_desktop_activity.sql  0005_realtime_browser_activity.sql  0006_day_plans.sql  0007_recurring_tasks.sql  0008_completed_task_cleanup.sql
(+29 files in other folders)
